--- a/DetectiingFlip/app/src/main/AndroidManifest.xml
+++ b/DetectiingFlip/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.example.detectiingflip">
 
     <uses-permission android:name="android.permission.ACCESS_NOTIFICATION_POLICY" />
+    <uses-permission android:name="android.permission.VIBRATE"/>
+
 
     <application
         android:allowBackup="true"
