--- a/Smartify/app/src/main/AndroidManifest.xml
+++ b/Smartify/app/src/main/AndroidManifest.xml
@@ -16,10 +16,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
         <activity
             android:name=".Flip"
             android:label="@string/title_activity_flip"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar"/>
         <activity
             android:name=".SplashScreen"
             android:theme="@style/Theme.AppCompat.Light.NoActionBar">
@@ -33,6 +37,8 @@
 
         <activity android:name=".OnBoarding" />
         <activity android:name=".MainActivity" />
-    </application>
+        <activity
+            android:name=".MapsActivity"
+            android:label="@string/title_activity_maps" />    </application>
 
 </manifest>
