saala kaam hi nahi kar rha

--- a/feature4/app/src/main/AndroidManifest.xml
+++ b/feature4/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.example.feature4">
 
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.FOREGROUND_SERVICE"/>
 
     <application
         android:allowBackup="true"
