--- a/calendar/app/build.gradle
+++ b/calendar/app/build.gradle
@@ -28,9 +28,10 @@ dependencies {
     implementation 'com.wefika:collapse-calendar-view:0.1.0'
     implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
-    compile 'com.github.alamkanak:android-week-view:1.2.6'
+    implementation 'com.github.alamkanak:android-week-view:1.2.6'
 
 }
